--- a/div.Rmd
+++ b/div.Rmd
@@ -141,33 +141,16 @@ richness <- subplot(map1, hist1)
 simpson <- subplot(map2, hist2)
 shannon <- subplot(map3, hist3)
 
-shinyApp(
-  
-  ui = fluidPage(mainPanel(column(12, 
-             tabsetPanel(
-               tabPanel("Species Richness", fluidRow(plotOutput("richness"))),
-               tabPanel("Simpson Index", fluidRow(plotOutput("simpson"))),
-               tabPanel("Shannon Index", fluidRow(plotOutput("shannon")))
-                        )
-                                )
-             )
-      ),
-  
-  server = function(input, output) {
-  
-  output$richness <- renderPlot({richness})
-  
-  output$simpson <- renderPlot({simpson})
-
-  output$shannon <- renderPlot({shannon})
-  
-},
-  
-  options = list(height = 500)
-
-)
-
 ```
+
+```{r, echo = FALSE}
+shinyAppDir(
+  "data/div")
+  options=list(
+    width="100%", height=700
+  )
+```
+
 
 ### Species Richness
 ```{r richness-fig, echo = FALSE, fig.asp = 0.6}
