--- a/div.Rmd
+++ b/div.Rmd
@@ -254,7 +254,7 @@ b1 <- ggplot(alldata, aes(depth_cat, richness)) + geom_boxplot(aes(fill = depth_
   scale_fill_brewer() + coord_fixed(ratio=0.17) + theme(legend.position = "none", axis.title.y = element_blank(), axis.title.x = element_blank())
 
 b2 <- ggplot(alldata, aes(depth_cat, simpson)) + geom_boxplot(aes(fill = depth_cat)) +
-  scale_fill_brewer() + xlab("Depth 'habitats'") + theme(legend.position = "none", axis.title.y = element_blank()) + coord_fixed(ratio=4.3)
+  scale_fill_brewer() + theme(legend.position = "none", axis.title.y = element_blank()) + coord_fixed(ratio=4.3)
 
 b3 <- ggplot(alldata, aes(depth_cat, shannon)) + geom_boxplot(aes(fill = depth_cat)) +
   scale_fill_brewer() + theme(legend.position = "none", axis.title.y = element_blank(), axis.title.x = element_blank()) + coord_fixed(ratio=1.6)
