revised block element

--- a/abd.Rmd
+++ b/abd.Rmd
@@ -12,6 +12,8 @@ output:
 
 ```{block, type='rmdcomment'}
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
 ##**WHAT YOU NEED TO KNOW**  
 
 **Abundance is dynamic, and the patterns in abundance maps can be driven by one 
