--- a/div.Rmd
+++ b/div.Rmd
@@ -8,7 +8,7 @@ output:
       smooth_scroll: false
 ---
 
-<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+<link href="site_libs/fontawesome-free-5.0.13/web-fonts-with-css/css/fontawesome.min.css" rel="stylesheet">
 
 ```{block, type='rmdcomment'}
 
